' @autogenerated
@startuml
left to right direction
title Clases para user identity
class master.User{
uid:string
name:string
password:string
email:string
wellcomeAt:datetime
enabled:boolean
approve:UserApproveOptions
temporalPassword:boolean
useSecondFactors:boolean
secondFactorSeed:string
blockedUntil:datetime
provider:string
version:integer
list()
retrieve()
create()
update()
delete()
register()
verify()
accept()
reject()
disable()
enable()
unlock()
block()
setMfaSeed()
changePassword()
}
class master.RelyingParty{
uid:string
code:string
apiKey:string
enabled:boolean
version:integer
list()
retrieve()
create()
update()
delete()
enable()
disable()
}
class master.TrustedClient{
uid:string
code:string
publicAllow:boolean
secretOauth:string
enabled:boolean
version:integer
list()
retrieve()
create()
update()
delete()
enable()
disable()
}
class master.UserIdentityRole{
uid:string
version:integer
}
class master.UserIdentity{
uid:string
version:integer
list()
retrieve()
create()
update()
delete()
}
master.User "1"  o--  "N*" master.UserIdentity: user
master.RelyingParty "1"  o--  "N*" master.UserIdentity: relyingParty
master.TrustedClient "1"  o--  "N*" master.UserIdentity: trustedClient
master.UserIdentityRole "N*"  o--  "1" master.UserIdentity: roles

footer Generado el %date("dd.MM.yyyy' a las 'HH:mm")
@enduml
